# NLDKit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh
cpp/: CMakeLists.txt
cpp/include/: AbstractDynamicalSystem.hpp  Definitions.hpp  DynamicalSystem.hpp  Integrator.hpp  ParameterSweep.hpp  UserDefinedSystem.hpp
cpp/include/systems/: DampedOscillator.hpp
cpp/src/: main.cpp
cpp/src/boilerplates/: example_rhs.cpp
cpp/src/core/: Integrator.cpp  ParameterSweep.cpp  UserDefinedSystem.cpp
cpp/src/systems/: DampedOscillator.cpp
cpp/tests/: test_damped_oscillator.cpp
data/: damped_oscillator.csv
examples/: demo_limit_cycle.py
nldkit/analysis/: bifurcations.py  chaos_tools.py  limit_cycles.py  phase_reduction.py
nldkit/core/: events.py  solvers.py  system_base.py
nldkit/models/: lorenz.py  sl.py  vdp.py
nldkit/visualization/: plot_bifurcation.py  plot_phase.py  plot_poincare.py
python/: plot_damped_oscillator.py  print_python_info.py
